# Kokrokooo_Coupon

./: .gitignore  README.md  START_APP.bat  main.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  models.py  routes.py  utils.py
app/static/css/: dashboard.css
app/templates/: admin.html  base.html  dashboard.html  export.html  import.html  import_result.html  logs.html  redeem.html  register.html  sidebar.html
instance/: coupons.db  import_batch_20251207_172354_5f52b5f4.json
